Usage of <main>; <header> and <footer>
From now there is a segmentation and the menu isn't sticky anymore (because it is the header now).
I am going to fix the footer problems with the usage of BS.

--- a/KubanyiBalint.html
+++ b/KubanyiBalint.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Kubányi Bálint</title>
 </head>
 
 <body class="Tagok">
-    <div class="Tagok" id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main class="Tagok" id="Content">
         <h1 class="Tagok">Kubányi Bálint</h1>
         <img class="Tagok" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
         <p class="Tagok">Kubányi Bálint a Supernem zenekar billentyűse. Az eggyüttesből ő egyedül az, aki nem olyan elkötelezetten rock
@@ -17,8 +28,10 @@
             Még mielőtt véglegesen csatlakozott a Supernemhez már félig meddig a tagja volt, hiszen néha feltűnt
             koncerteken, mint csomó másik előadónal, de az eggyüttes oszlopos tagja csak 2011-ben lett. Általában őt is
             vidám hangulat jellemzi.</p>
+    </main>
+    <footer class="w-100">
         <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
-    </div>
+    </footer>
 </body>
 
 </html>
