--- a/NagyDavid.html
+++ b/NagyDavid.html
@@ -4,20 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Nagy Dávid</title>
 </head>
 
 <body class="Tagok">
-    <div class="Tagok" id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main class="Tagok" id="Content">
         <h1 class="Tagok">Nagy Dávid</h1>
         <img class="Tagok" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
-        <p class="Tagok">Nagy Dávid a Supernem zenekar dobosa, aki 2016-ban váltotta fel Mózsik Imrét, azóta is adja az ütemet a
+        <p class="Tagok">Nagy Dávid a Supernem zenekar dobosa, aki 2016-ban váltotta fel Mózsik Imrét, azóta is adja az
+            ütemet a
             Supernemnek jellegzetes áttetsző sárgás dobkészletén. A Supernem előtt az Óriások dobosa
             és dalszövegírója volt. Általában vidám szokott lenni. Külsőleg egy körszakáll jellemzi és a kis "taraját"
             mindig más színűre festi.</p>
+    </main>
+    <footer class="w-100">
         <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
-    </div>
+    </footer>
 </body>
 
 </html>
