--- a/PappSzabi.html
+++ b/PappSzabi.html
@@ -5,12 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<link rel="stylesheet" href="tagok.css">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Papp Szabolcs</title>
 </head>
 
 <body class="Tagok">
-    <div class="Tagok" id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main class="Tagok" id="Content">
         <h1 class="Tagok">Papp Szabolcs</h1>
         <img class="Tagok" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
         <p class="Tagok">Papp Szabolcs a Supernem zenekar énekese és basszusgitárosa. 1976.02.19-én született Békéscsabán.
@@ -24,9 +35,11 @@
             énekli el. Általában vidám hangulat jellemzi. Mostanság talán annyira nem, de nem olyan régen egymás
             után
             láthattuk különböző kereskedelmi csatornákon zsűriként vagy műsorvezető szerepében.</p>
+    </main>
+    <footer class="w-100">
         <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok">Forrás</a>
         <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
-    </div>
+    </footer>
 </body>
 
 </html>
