--- a/PuliusTibor.html
+++ b/PuliusTibor.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Pulius Tibor</title>
 </head>
 
 <body class="Tagok">
-    <div class="Tagok" id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main class="Tagok" id="Content">
         <h1 class="Tagok">Pulius Tibor</h1>
         <img src="Images/pulius-tibor.jpg" class="Tagok" alt="Pulius Tibor" title="Pulius Tibor">
         <p class="Tagok">Pulius Tibor a Supernem zenekar vokalistája és gitárosa. 1977.05.06-án született Kecskeméten. Zenész családba
@@ -20,9 +31,11 @@
             jobban foglalkozott jazzel, és végül egy évet töltött a Kőbányai Zenei Stúdióban, ami után már nem sokkal
             következett a Supernem. Általában vidám
             hangulat jellemzi őt is, külsőre meg göndör haj.</p>
+    </main>
+    <footer class="w-100">    
         <a class="Tagok" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
         <a href="foOldal.html"><img id="vissza" class="Tagok" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
-    </div>
+    </footer>
 </body>
 
 </html>
