--- a/foOldal.html
+++ b/foOldal.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kiss Bálint">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Supernem</title>
 </head>
 
 <body>
-    <div id="Menu">
-        <a href="PappSzabi.html">Papp Szabolcs</a>
-        <a href="PuliusTibor.html">Pulius Tibor</a>
-        <a href="Weekend.html">Weekend</a>
-        <a href="KubanyiBalint.html">Kubányi Bálint</a>
-        <a href="NagyDavid.html">Nagy Dávid</a>
-    </div>
-    <div id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main id="Content">
         <h1>Supernem</h1>
         <p>A Supernem egy 2002-ben alakult magyar punk rock együttes, akik mostanság már rendszeres fellépőik magyar
             rock klubboknak és fesztiváloknak. Dalaik általában vidám hangulatúak és pörgősek változatos és ötletes
@@ -174,8 +178,12 @@
                         énekel.
             </p>
         </div>
-        <a href="https://hu.wikipedia.org/wiki/Supernem">Forrás</a>
-    </div>
+    </main>
+    <footer class="w-100">
+        <a href="https://hu.wikipedia.org/wiki/Supernem">
+            <p>Forrás</p>
+        </a>
+    </footer>
 </body>
 
 </html>
