--- a/Weekend.html
+++ b/Weekend.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Fooldal.css">
     <title>Weekend</title>
 </head>
 <body class="Tagok">
-    <div class="Tagok" id="Content">
+    <header>
+        <div id="Menu">
+            <a href="PappSzabi.html">Papp Szabolcs</a>
+            <a href="PuliusTibor.html">Pulius Tibor</a>
+            <a href="Weekend.html">Weekend</a>
+            <a href="KubanyiBalint.html">Kubányi Bálint</a>
+            <a href="NagyDavid.html">Nagy Dávid</a>
+        </div>
+    </header>
+    <main class="Tagok" id="Content">
         <h1 class="Tagok">Weekend</h1>
         <img class="Tagok" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
         <ol class="Tagok">
@@ -22,7 +33,9 @@
             <li><a href="https://youtu.be/ybMcbv72ge8" target="_blank">Weekend</a></li>
             <li><a href="https://youtu.be/aspQd19EeuA" target="_blank">Szabad</a></li>
         </ol>
+    </main>
+    <footer class="w-100">
         <a href="foOldal.html"><img class="Tagok" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
-    </div>
+    </footer>
 </body>
 </html>
