--- a/PuliusTibor.html
+++ b/PuliusTibor.html
@@ -12,13 +12,31 @@
 
 <body class="Tagok">
     <header>
-        <div id="Menu">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto">
+                        <a class="nav-link" href="PappSzabi.html">Papp Szabi</a>
+                        <a class="nav-link" href="PuliusTibor.html">Pulius Tibor</a>
+                        <a class="nav-link" href="Weekend.html">Weekend</a>
+                        <a class="nav-link" href="KubanyiBalint.html">Kubányi Bálint</a>
+                        <a class="nav-link" href="NagyDavid.html">Nagy Dávid</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- <div id="Menu">
             <a href="PappSzabi.html">Papp Szabolcs</a>
             <a href="PuliusTibor.html">Pulius Tibor</a>
             <a href="Weekend.html">Weekend</a>
             <a href="KubanyiBalint.html">Kubányi Bálint</a>
             <a href="NagyDavid.html">Nagy Dávid</a>
-        </div>
+        </div> -->
     </header>
     <main class="Tagok" id="Content">
         <h1 class="Tagok">Pulius Tibor</h1>
