--- a/NagyDavid.html
+++ b/NagyDavid.html
@@ -38,17 +38,17 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok" id="Content">
-        <h1 class="Tagok">Nagy Dávid</h1>
-        <img class="Tagok" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
-        <p class="Tagok">Nagy Dávid a Supernem zenekar dobosa, aki 2016-ban váltotta fel Mózsik Imrét, azóta is adja az
+    <main class="Tagok row" id="Content">
+        <h1 class="Tagok col-12">Nagy Dávid</h1>
+        <p class="Tagok col-12 col-md-6 col-lg-8">Nagy Dávid a Supernem zenekar dobosa, aki 2016-ban váltotta fel Mózsik Imrét, azóta is adja az
             ütemet a
             Supernemnek jellegzetes áttetsző sárgás dobkészletén. A Supernem előtt az Óriások dobosa
             és dalszövegírója volt. Általában vidám szokott lenni. Külsőleg egy körszakáll jellemzi és a kis "taraját"
             mindig más színűre festi.</p>
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/nagy-david.jpg" alt="Nagy Dávid" title="Nagy Dávid">
     </main>
-    <footer class="w-100">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
+    <footer class="w-100 row">
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 
