--- a/PappSzabi.html
+++ b/PappSzabi.html
@@ -39,10 +39,9 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok" id="Content">
-        <h1 class="Tagok">Papp Szabolcs</h1>
-        <img class="Tagok" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
-        <p class="Tagok">Papp Szabolcs a Supernem zenekar énekese és basszusgitárosa. 1976.02.19-én született Békéscsabán.
+    <main class="Tagok row" id="Content">
+        <h1 class="Tagok col-12">Papp Szabolcs</h1>
+        <p class="Tagok col-12 col-md-6 col-lg-8">Papp Szabolcs a Supernem zenekar énekese és basszusgitárosa. 1976.02.19-én született Békéscsabán.
             Gyermekkora
             óta a
             Rock'n'Rollon nevelkedett és az ehhez
@@ -53,10 +52,11 @@
             énekli el. Általában vidám hangulat jellemzi. Mostanság talán annyira nem, de nem olyan régen egymás
             után
             láthattuk különböző kereskedelmi csatornákon zsűriként vagy műsorvezető szerepében.</p>
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/papp-szabi.jpg" alt="Papp Szabi" title="Papp Szabi">
     </main>
-    <footer class="w-100">
-        <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok">Forrás</a>
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
+    <footer class="w-100 row">
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12 col-md-6" id="vissza" alt="Vissza a főoldalra"></a>
+        <a href="https://starity.hu/sztarok/papp-szabolcs/" class="Tagok col-12 col-md-6 mx-auto text-right">Forrás</a>
     </footer>
 </body>
 
