--- a/PuliusTibor.html
+++ b/PuliusTibor.html
@@ -38,10 +38,9 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok" id="Content">
-        <h1 class="Tagok">Pulius Tibor</h1>
-        <img src="Images/pulius-tibor.jpg" class="Tagok" alt="Pulius Tibor" title="Pulius Tibor">
-        <p class="Tagok">Pulius Tibor a Supernem zenekar vokalistája és gitárosa. 1977.05.06-án született Kecskeméten. Zenész családba
+    <main class="Tagok row" id="Content">
+        <h1 class="Tagok col-12">Pulius Tibor</h1>
+        <p class="Tagok col-12 col-md-6 col-lg-8">Pulius Tibor a Supernem zenekar vokalistája és gitárosa. 1977.05.06-án született Kecskeméten. Zenész családba
             született, apja is híres gitáros, ezért egyértelmű lett volna, hogy zenével kezd el foglalkozni, de eredetileg
             sportolónak készült, aztán rátalált, vagy inkább ő talált rá az AC/DC-re, és úgydöntött, hogy megtanul
             gitarozni, ami láthatjuk mennyire jó ötlet volt, hiszen manapság Magyarország egyik legjobb gitárosaként van
@@ -49,10 +48,11 @@
             jobban foglalkozott jazzel, és végül egy évet töltött a Kőbányai Zenei Stúdióban, ami után már nem sokkal
             következett a Supernem. Általában vidám
             hangulat jellemzi őt is, külsőre meg göndör haj.</p>
-    </main>
-    <footer class="w-100">    
-        <a class="Tagok" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
-        <a href="foOldal.html"><img id="vissza" class="Tagok" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
+        <img src="Images/pulius-tibor.jpg" class="Tagok d-none d-md-block col-md-6 col-lg-4" alt="Pulius Tibor" title="Pulius Tibor">
+        </main>
+    <footer class="w-100 row">    
+        <a href="foOldal.html"><img id="vissza" class="Tagok col-12 col-md-6" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
+        <a class="Tagok col-12 col-md-6 mx-auto text-right" href="https://hajonaplo.ma/zene/pulius-tibor-a-magyar-punk-mesterlovesze.html">Forrás</a>
     </footer>
 </body>
 
