--- a/Weekend.html
+++ b/Weekend.html
@@ -36,10 +36,9 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok" id="Content">
-        <h1 class="Tagok">Weekend</h1>
-        <img class="Tagok" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
-        <ol class="Tagok">
+    <main class="Tagok row" id="Content">
+        <h1 class="Tagok col-12">Weekend</h1>
+        <ol class="Tagok col-12 col-md-6 col-lg-8">
             <li><a href="https://youtu.be/mvN1FGSIa20" target="_blank">Presszó</a></li>
             <li><a href="https://youtu.be/rqye_F2ABvg" target="_blank">Nemzeti dal</a></li>
             <li><a href="https://youtu.be/8dKBaT0BWOE" target="_blank">Jelezz vissza</a></li>
@@ -51,9 +50,10 @@
             <li><a href="https://youtu.be/ybMcbv72ge8" target="_blank">Weekend</a></li>
             <li><a href="https://youtu.be/aspQd19EeuA" target="_blank">Szabad</a></li>
         </ol>
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
     </main>
-    <footer class="w-100">
-        <a href="foOldal.html"><img class="Tagok" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
+    <footer class="w-100 row">
+        <a href="foOldal.html"><img class="Tagok col-12" id="vissza" src="Images/Vissza.png" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 </html>
