--- a/foOldal.html
+++ b/foOldal.html
@@ -16,12 +16,12 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-auto">
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
                         <a class="nav-link" href="PappSzabi.html">Papp Szabi</a>
                         <a class="nav-link" href="PuliusTibor.html">Pulius Tibor</a>
                         <a class="nav-link" href="Weekend.html">Weekend</a>
@@ -40,82 +40,88 @@
         </div> -->
     </header>
     <main id="Content">
-        <h1>Supernem</h1>
-        <p>A Supernem egy 2002-ben alakult magyar punk rock együttes, akik mostanság már rendszeres fellépőik magyar
-            rock klubboknak és fesztiváloknak. Dalaik általában vidám hangulatúak és pörgősek változatos és ötletes
-            szöveggel. Számaikban általában
-            valamilyen jellegű társadalomkritikát fogalmaznak meg, ami néha a politikára, néha a fogyasztói
-            társadalomra, néha az emberek zenei ízlésére
-            vagy a bulvár kifigurázására irányul. Az eredeti felállásban <a href="PappSzabi.html">Papp
-                Szabolcs</a> (basszusgitár
-            és ének), <a href="PuliusTibor.html">Pulius Tibor</a> (gitár és vokál) és Mózsik Imre (dobos) volt. Belőlük
-            mára Mózsik Imrén
-            kívül még
-            mindenki
-            maradt, azóta lett egy új tag <a href="KubanyiBalint.html">Kubányi
-                Bálint</a> (billentyűs hangszerek) személyében, aki 2011-ben csatlakozott. Mózsik Imrét <a
-                href="NagyDavid.html">Nagy Dávid</a> váltotta fel
-            még
-            2016-ban és azóta nem volt változás. </p>
-        <p>Még az első évükben megjelent első kislemezük és az első videóklipjük a K-k-kétszer című számukhoz. 2003-ban
-            megjelent első nagylemezük is <a href="#Hangosabban"><em>Hangosabban!</em></a> címmel. Az évek alatt nagyon
-            sok daluk megragadt a köztudatban Mára már 6 albumot is
-            kiadtak, amikről az akábbiakban lehet olvasni.</p>
-        <table>
-            <tr>
-                <th>Cím</th>
-                <th>Dátum</th>
-                <th>Hossz</th>
-                <th>Műfaj</th>
-                <th>Kiadó</th>
-            </tr>
-            <tr>
-                <td><a href="#Hangosabban!">Hangosabban!</a></td>
-                <td>2003. május</td>
-                <td>46 perc 45 mp</td>
-                <td>rock, punk rock</td>
-                <td>Gold Record</td>
-            </tr>
-            <tr>
-                <td><a href="#Tejfog">Tejfog</a></td>
-                <td>2005. november 11.</td>
-                <td>41 perc 02 mp</td>
-                <td>rock, punk rock</td>
-                <td>Gold Record</td>
-            </tr>
-            <tr>
-                <td><a href="#Nemde">Nemde</a></td>
-                <td>2007. november 5.</td>
-                <td>35 perc 58 mp</td>
-                <td>rock, punk rock</td>
-                <td>Tom-Tom Records</td>
-            </tr>
-            <tr>
-                <td><a href="#Tudomanyos">Tudományos Fantasztikus Pop</a></td>
-                <td>2011. április 16.</td>
-                <td>27 perc 21 mp</td>
-                <td>rock, punk rock</td>
-                <td>1G Records</td>
-            </tr>
-            <tr>
-                <td><a href="#Frekvencia">Túl a frekvencián</a></td>
-                <td>2014. május 2.</td>
-                <td>28 perc 10 mp</td>
-                <td>rock, punk rock</td>
-                <td>Gold Record</td>
-            </tr>
-            <tr>
-                <td><a href="#Weekend">Weekend</td>
-                <td>2018. április 18.</td>
-                <td>24 perc 24 mp</td>
-                <td>rock, punk rock</td>
-                <td>Gold Record</td>
-            </tr>
-        </table>
-        <div class="Album">
-            <h2 id="Hangosabban">Hangosabban!</h2>
-            <img src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
-            <p>A <i>Hangosabban!</i> névre hallgató albumjuk az elős albumjuk volt, ami 2003-ban jelent meg. Ez a lemez
+        <div class="row">
+            <h1 class="col-12">Supernem</h1>
+            <p class="col-12">A Supernem egy 2002-ben alakult magyar punk rock együttes, akik mostanság már rendszeres
+                fellépőik magyar
+                rock klubboknak és fesztiváloknak. Dalaik általában vidám hangulatúak és pörgősek változatos és ötletes
+                szöveggel. Számaikban általában
+                valamilyen jellegű társadalomkritikát fogalmaznak meg, ami néha a politikára, néha a fogyasztói
+                társadalomra, néha az emberek zenei ízlésére
+                vagy a bulvár kifigurázására irányul. Az eredeti felállásban <a href="PappSzabi.html">Papp
+                    Szabolcs</a> (basszusgitár
+                és ének), <a href="PuliusTibor.html">Pulius Tibor</a> (gitár és vokál) és Mózsik Imre (dobos) volt.
+                Belőlük
+                mára Mózsik Imrén
+                kívül még
+                mindenki
+                maradt, azóta lett egy új tag <a href="KubanyiBalint.html">Kubányi
+                    Bálint</a> (billentyűs hangszerek) személyében, aki 2011-ben csatlakozott. Mózsik Imrét <a
+                    href="NagyDavid.html">Nagy Dávid</a> váltotta fel
+                még
+                2016-ban és azóta nem volt változás. </p>
+            <p class="col-12">Még az első évükben megjelent első kislemezük és az első videóklipjük a K-k-kétszer című
+                számukhoz.
+                2003-ban
+                megjelent első nagylemezük is <a href="#Hangosabban"><em>Hangosabban!</em></a> címmel. Az évek alatt
+                nagyon
+                sok daluk megragadt a köztudatban Mára már 6 albumot is
+                kiadtak, amikről az akábbiakban lehet olvasni.</p>
+            <table class="col-12">
+                <tr>
+                    <th>Cím</th>
+                    <th>Dátum</th>
+                    <th>Hossz</th>
+                    <th>Műfaj</th>
+                    <th>Kiadó</th>
+                </tr>
+                <tr>
+                    <td><a href="#Hangosabban!">Hangosabban!</a></td>
+                    <td>2003. május</td>
+                    <td>46 perc 45 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>Gold Record</td>
+                </tr>
+                <tr>
+                    <td><a href="#Tejfog">Tejfog</a></td>
+                    <td>2005. november 11.</td>
+                    <td>41 perc 02 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>Gold Record</td>
+                </tr>
+                <tr>
+                    <td><a href="#Nemde">Nemde</a></td>
+                    <td>2007. november 5.</td>
+                    <td>35 perc 58 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>Tom-Tom Records</td>
+                </tr>
+                <tr>
+                    <td><a href="#Tudomanyos">Tudományos Fantasztikus Pop</a></td>
+                    <td>2011. április 16.</td>
+                    <td>27 perc 21 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>1G Records</td>
+                </tr>
+                <tr>
+                    <td><a href="#Frekvencia">Túl a frekvencián</a></td>
+                    <td>2014. május 2.</td>
+                    <td>28 perc 10 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>Gold Record</td>
+                </tr>
+                <tr>
+                    <td><a href="#Weekend">Weekend</td>
+                    <td>2018. április 18.</td>
+                    <td>24 perc 24 mp</td>
+                    <td>rock, punk rock</td>
+                    <td>Gold Record</td>
+                </tr>
+            </table>
+        </div>
+        <div class="Album row">
+            <h2 id="Hangosabban" class="col-12">Hangosabban!</h2>
+            <p class="col-12 col-md-6 col-lg-8">A <i>Hangosabban!</i> névre hallgató albumjuk az elős albumjuk volt, ami 2003-ban jelent meg. Ez a lemez
                 adta
                 meg a
                 kezdeti sikert nekik, hiszen váratlanul jól fogadta a közönség és felkapta őket. Az album összesen 46
@@ -126,11 +132,12 @@
                 is, valamint tartalmaz egy <a href="https://youtu.be/709rEWYxyJg" target="_blank"><i>Induljon a
                         banzáj</i></a> feldolgozást is.
             </p>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Hangosabban.jpg" alt="Hangosabban!" title="Hangosabban!">
         </div>
-        <div class="Album">
-            <h2 id="Tejfog">Tejfog</h2>
-            <img src="Images/Tejfog.jpg" alt="Tejfog" title="Tejfog">
-            <p>A <i>Tejfog</i> nevű album volt a második, ami 2005-ben készült el. Az album összesen 41
+        <div class="Album row">
+            <h2 class="col-12" id="Tejfog">Tejfog</h2>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Tejfog.jpg" alt="Tejfog" title="Tejfog">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Tejfog</i> nevű album volt a második, ami 2005-ben készült el. Az album összesen 41
                 percre foglalja le az érdeklődőket, ami 11 dalból áll. Erről az albumról ismertebb szám lett a
                 <a href="https://youtu.be/3h-csjUt_d0" target="_blank"><i>Majomdal</i></a>, a <a
                     href="https://youtu.be/tjdXedpgm6g" target="_blank"><i>Számolj
@@ -140,20 +147,20 @@
                 verziót is <a href="https://youtu.be/2gXKlHOyIfs" target="_blank"><i>Count Me Out</i></a> névvel.
             </p>
         </div>
-        <div class="Album">
-            <h2 id="Nemde">Nemde</h2>
-            <img src="Images/Nemde.jpg" alt="Nemde" title="Nemde">
-            <p>A <i>Nemde</i> névvel ellátott albumjuk a harmadik volt, ami 2007-ben lett publikus. Az album összesen 36
+        <div class="Album row">
+            <h2 class="col-12" id="Nemde">Nemde</h2>
+            <p class="col-12 col-md-6 col-lg-8">A <i>Nemde</i> névvel ellátott albumjuk a harmadik volt, ami 2007-ben lett publikus. Az album összesen 36
                 percnyi szórakozást nyújt, ami 10 dalt tartalmaz. Erről az albumról ismerős szám lehet a
                 <a href="https://youtu.be/Pxuh0paj0zI" target="_blank"><i>Zsebre dugott kézzel</i></a>, a <a
-                    href="https://youtu.be/dRjCygYnoaM" target="_blank"><i>Generáció</i></a> és az <a
-                    href="https://youtu.be/vAj--HaSJSM" target="_blank"><i>Enyém-tied</i></a> is.
+                href="https://youtu.be/dRjCygYnoaM" target="_blank"><i>Generáció</i></a> és az <a
+                href="https://youtu.be/vAj--HaSJSM" target="_blank"><i>Enyém-tied</i></a> is.
             </p>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Nemde.jpg" alt="Nemde" title="Nemde">
         </div>
-        <div class="Album">
-            <h2 id="Tudomanyos">Tudományos Fantasztikus Pop</h2>
-            <img src="Images/Tudomanyos.jpg" alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
-            <p>A <i>Tudományos Fantasztikus Pop</i> a negyedik lemezük volt, ami 2011-ben látott napvilágot. Az album
+        <div class="Album row">
+            <h2 class="col-12" id="Tudomanyos">Tudományos Fantasztikus Pop</h2>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Tudomanyos.jpg" alt="Tudományos Fantasztikus Pop" title="Tudományos Fantasztikus Pop">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Tudományos Fantasztikus Pop</i> a negyedik lemezük volt, ami 2011-ben látott napvilágot. Az album
                 összesen 27
                 percnyi szórakozást nyújt, ami 9 dalból áll. Megjelenésekor az album a MAHASZ <i>Top 40 album</i>
                 listáján a
@@ -166,23 +173,23 @@
                         a moziba be!</i></a>.
             </p>
         </div>
-        <div class="Album">
-            <h2 id="Frekvencia">Túl a frekvencián</h2>
-            <img src="Images/Frekvencia.jpg" alt="Túl a frekvencián" title="Túl a frekvencián">
-            <p>A <i>Túl a frekvencián</i> névre keresztelt albumjuk az ötödik volt, ami 2014-ben jelent meg. A lemez
+        <div class="Album row">
+            <h2 class="col-12" id="Frekvencia">Túl a frekvencián</h2>
+            <p class="col-12 col-md-6 col-lg-8">A <i>Túl a frekvencián</i> névre keresztelt albumjuk az ötödik volt, ami 2014-ben jelent meg. A lemez
                 kijövetelekor felkerült a MAHASZ <i>Top 40 album</i> listájára, méghozzá előkelő 4. helyen. Az album
                 összesen 28
                 percnyi szórakozást nyújt, ami 8 dalból áll. Erről az albumról ismerős dal lehet a
                 <a href="https://youtu.be/aK-V7vOq1tU" target="_blank"><i>Túl a frekvencián</i></a>, a <a
-                    href="https://youtu.be/u03JwBrDLMA" target="_blank"><i>Egy a
-                        millióból</i></a> és a <a href="https://youtu.be/hct-O-x3bEQ"
+                href="https://youtu.be/u03JwBrDLMA" target="_blank"><i>Egy a
+                    millióból</i></a> és a <a href="https://youtu.be/hct-O-x3bEQ"
                     target="_blank"><i>Szívbemarkoló</i></a> is.
             </p>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Frekvencia.jpg" alt="Túl a frekvencián" title="Túl a frekvencián">
         </div>
-        <div class="Album">
-            <h2 id="Weekend">Weekend</h2>
-            <img src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
-            <p>A <i>Weekend</i> névű albumjuk a hatodik volt, ami 2018-ban jelent meg, és jelenleg ez a legújabb. Az
+        <div class="Album row">
+            <h2 class="col-12" id="Weekend">Weekend</h2>
+            <img class="d-none d-md-block col-md-6 col-lg-4" src="Images/Weekend.jpg" alt="Weekend" title="Weekend">
+            <p class="col-12 col-md-6 col-lg-8">A <i>Weekend</i> névű albumjuk a hatodik volt, ami 2018-ban jelent meg, és jelenleg ez a legújabb. Az
                 album
                 összesen 24
                 percnyi szórakozást nyújt, ezzel ez eddig legrövidebb albumjuk, ami 10 dalból áll(ebből 2 intró). Amikor
