--- a/KubanyiBalint.html
+++ b/KubanyiBalint.html
@@ -38,17 +38,17 @@
             <a href="NagyDavid.html">Nagy Dávid</a>
         </div> -->
     </header>
-    <main class="Tagok" id="Content">
-        <h1 class="Tagok">Kubányi Bálint</h1>
-        <img class="Tagok" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
-        <p class="Tagok">Kubányi Bálint a Supernem zenekar billentyűse. Az eggyüttesből ő egyedül az, aki nem olyan elkötelezetten rock
+    <main class="Tagok row" id="Content">
+        <h1 class="Tagok col-12">Kubányi Bálint</h1>
+        <p class="Tagok col-12 col-md-6 col-lg-8">Kubányi Bálint a Supernem zenekar billentyűse. Az eggyüttesből ő egyedül az, aki nem olyan elkötelezetten rock
             rajongó. Szintetizátoron játszik és dalszöveget ír. A Supernem előtt már sokmindent csinált a zenei világban.
             Még mielőtt véglegesen csatlakozott a Supernemhez már félig meddig a tagja volt, hiszen néha feltűnt
             koncerteken, mint csomó másik előadónal, de az eggyüttes oszlopos tagja csak 2011-ben lett. Általában őt is
             vidám hangulat jellemzi.</p>
+        <img class="Tagok d-none d-md-block col-md-6 col-lg-4" src="Images/kubanyi_balint.jpg" alt="Kubányi Bálint" title="Kubányi Bálint">
     </main>
-    <footer class="w-100">
-        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok" id="vissza" alt="Vissza a főoldalra"></a>
+    <footer class="w-100 row">
+        <a href="foOldal.html"><img src="Images/Vissza.png" class="Tagok col-12" id="vissza" alt="Vissza a főoldalra"></a>
     </footer>
 </body>
 
